// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/web/requestMapping.test.ts requestMapping decorator should be ok 1`] = `
[
  {
    "description": "",
    "ignoreGlobalPrefix": false,
    "method": "doGet",
    "middleware": [
      "hello",
    ],
    "path": "/get",
    "requestMethod": "get",
    "routerName": "get",
    "summary": "",
  },
  {
    "description": "",
    "ignoreGlobalPrefix": false,
    "method": "doPost",
    "middleware": [
      "hello",
    ],
    "path": "/get",
    "requestMethod": "post",
    "routerName": "post",
    "summary": "test post method",
  },
  {
    "description": "test option method",
    "ignoreGlobalPrefix": false,
    "method": "doOptions",
    "middleware": [
      "hello",
    ],
    "path": "/get",
    "requestMethod": "options",
    "routerName": "options",
    "summary": "",
  },
  {
    "description": "",
    "ignoreGlobalPrefix": false,
    "method": "doHead",
    "middleware": [
      "hello",
    ],
    "path": "/get",
    "requestMethod": "head",
    "routerName": "head",
    "summary": "",
  },
  {
    "description": "",
    "ignoreGlobalPrefix": false,
    "method": "doAll",
    "middleware": undefined,
    "path": "/",
    "requestMethod": "all",
    "routerName": "all",
    "summary": "",
  },
]
`;

exports[`/test/web/requestMapping.test.ts requestMapping decorator should be ok 2`] = `
{
  "description": "",
  "ignoreGlobalPrefix": false,
  "method": "ttt",
  "middleware": [],
  "path": "/",
  "requestMethod": "get",
  "routerName": null,
  "summary": "",
}
`;

exports[`/test/web/requestMapping.test.ts requestMapping decorator should be ok 3`] = `
{
  "description": "",
  "ignoreGlobalPrefix": false,
  "method": "ttt",
  "middleware": undefined,
  "path": "/",
  "requestMethod": "get",
  "routerName": undefined,
  "summary": "",
}
`;
